--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
     background: linear-gradient(-45deg, #3a7fb7, #2785b0);
     background-size: 400% 400%;
     animation: Gradient 15s ease infinite;
-    min-width: 370px;
+    min-width: 100%;
   }
 
   .App-title {
@@ -55,7 +55,7 @@
     margin-top: 0;
   }
   .fa-5x {
-    font-size: 3.8rem !important;
+    font-size: 3.4rem !important;
   }
   .ScoreTable {
     display: flex;
@@ -77,7 +77,7 @@
   }
   .RuleRow td {
     padding: 0.1rem;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     border-bottom: solid 1px black;
   }
   .RuleRow-name {
@@ -93,7 +93,7 @@
     width: 100%;
   }
   .Dice {
-    padding: 1rem 1.5rem;
+    padding: 1rem 0.25rem;
     display: flex;
     justify-content: space-between;
   }
@@ -104,7 +104,7 @@
     margin-top: 4rem;
   }
   .Game-header {
-    min-width: 595px;
+    min-width: 100%;
   }
   .RuleRow td {
     padding: 0.1rem;
@@ -118,7 +118,7 @@
 
 @media only screen and (min-width: 411px) and (max-width: 426px) {
   .Game-header {
-    min-width: 420px;
+    min-width: 100%;
   }
   .fa-5x {
     font-size: 4rem !important;
@@ -127,12 +127,6 @@
 
 @media only screen and (min-width: 320px) and (max-width: 320px) {
   .Game-header {
-    min-width: 350px;
+    min-width: 100%;
   }
-}
-
-@media only screen and (min-width: 360px) and (max-width: 360px) {
-}
-
-@media only screen and (min-width: 375px) and (max-width: 375px) {
 }
